Fix 'padding-top' to 'align-items'

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -41,7 +41,8 @@
 }
 
 .time-element {
-  padding-top: 12px;
+  display: flex;
+  align-items: center;
 }
 
 .progress {
